fix decoration destroy stage...